--- a/Front - Proyecto/src/Administrativo/CRUD'S/Comentarios.html
+++ b/Front - Proyecto/src/Administrativo/CRUD'S/Comentarios.html
@@ -121,7 +121,7 @@
                 </div>
         
                 <div class="mt-10 ml-5 mr-5 grid gap-1">
-                    <a href="/src/Administrativo/Admin - Inicio.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/Admin - Inicio.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-6" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/home-white.png?raw=true" alt="icono-estudiante">
                             <p class="ml-4">Inicio</p>
