--- a/Front - Proyecto/src/Usuario/Comentarios.html
+++ b/Front - Proyecto/src/Usuario/Comentarios.html
@@ -328,7 +328,7 @@
         </div>                                                                    <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
     <script src="index.js"></script>
-    <script src="/src/index.js"></script>
+    <script src="/Front - Proyecto/src/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 
 </body>
