--- a/Front - Proyecto/src/Administrativo/Publicacion.html
+++ b/Front - Proyecto/src/Administrativo/Publicacion.html
@@ -416,7 +416,7 @@
     </div>
     
     <script src="index.js"></script>
-    <script src="/src/index.js"></script>
+    <script src="/Front - Proyecto/src/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
