--- a/Front - Proyecto/src/Administrativo/Reportes_Admin.html
+++ b/Front - Proyecto/src/Administrativo/Reportes_Admin.html
@@ -292,7 +292,7 @@
         </div>
     </footer>
     <script src="index.js"></script>
-    <script src="/src/index.js"></script>
+    <script src="/Front - Proyecto/src/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
